--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,7 +6,7 @@ name: yy-os
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
+base-image: ghcr.io/ublue-os/bazzite-gnome-nvidia-open
 image-version: 41 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
@@ -15,30 +15,86 @@ modules:
   - type: files
     files:
       - source: system
-        destination: / # copies files/system/* (* means everything inside it) into your image's root folder /
+        destination: / # copies files/system/* (* means everything inside it) into your image's root folder /              
 
   - type: rpm-ostree
-    repos:
-      - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
-      - micro
-      - starship
-    remove:
-      # example: removing firefox (in favor of the flatpak)
-      # "firefox" is the main package, "firefox-langpacks" is a dependency
-      - firefox
-      - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - samba-dcerpc
+      - samba-ldb-ldap-modules
+      - samba-winbind-clients
+      - samba-winbind-modules
+      - samba
+      - setools-console
+      - sssd-ad
+      - sssd-krb5
+      - sssd-nfs-idmap
+      - krb5-workstation
+      - adcli
+      - firewall-config
+      - fuse-encfs
+      - git-credential-libsecret
+      - glow
+      - gum
+      - libxcrypt-compat
+      - libsss_autofs
+      - oddjob-mkhomedir
+      - rclone
+      - restic
+      - wl-clipboard
+      - cryfs
+      - bcc
+      - bpftop
+      - bpftrace
+      - cockpit-bridge
+      - cockpit-machines
+      - cockpit-networkmanager
+      - cockpit-ostree
+      - cockpit-podman
+      - cockpit-selinux
+      - cockpit-storaged
+      - cockpit-system
+      - code
+      - iotop
+      - nicstat
+      - numactl
+      - p7zip-plugins
+      - p7zip
+      - rocm-hip
+      - rocm-opencl
+      - rocm-smi
+      - sysprof
+      - tiptop
+      - trace-cmd
+      - ydotool
 
   - type: default-flatpaks
-    notify: true # Send notification after install/uninstall is finished (true/false)
+    notify: true
     system:
-      # If no repo information is specified, Flathub will be used by default
       install:
         - org.mozilla.firefox
+        - com.mattjakeman.ExtensionManager
+        - com.github.Matoking.protontricks
+        - io.github.fastrizwaan.WineZGUI
+        - io.github.dvlv.boxbuddyrs
+        - it.mijorus.gearlever
+        - com.github.tchx84.Flatseal
+        - io.github.flattool.Warehouse
+        - io.github.flattool.Ignition
+        - io.missioncenter.MissionCenter
+        - com.vysp3r.ProtonPlus
+        - org.gnome.Calculator
+        - org.gnome.Characters
+        - org.gnome.Contacts
+        - org.gnome.Logs
         - org.gnome.Loupe
-      remove:
-        - org.gnome.eog
-    user: {} # Also add Flathub user repo, but no user packages
+        - org.gnome.TextEditor
+        - org.gnome.baobab
+        - org.gnome.font-viewer
+        - io.github.nokse22.Exhibit
+        - de.leopoldluley.Clapgrep
+
+  - type: copy
+    src: files/system/etc/bluebuild/default-flatpaks/system/install
+    dest: /etc/bluebuild/default-flatpaks/system/install
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
-
